Work toward just running on java 25
Signed-off-by: Tom <tom@temper.systems>